# 2CourseWork

./: .gitignore  CMakeLists.txt  README.md  Token.c  main.c  test.txt  text.in  text.out  token.c  token.h  vector.h
Lexer/: lexer.c
Lexer/tests/: 1_output.txt  4_input.txt  lexerTests.c
Source/All/Function/include/: function.h
Source/All/Function/src/: function.c
Source/All/FunctionList/include/: functionList.h
Source/All/FunctionList/src/: functionList.c
Source/All/Node/include/: Node.h  node.h
Source/All/Node/src/: Node.c  node.c
Source/All/Token/include/: token.h  tokenError.h
Source/All/Token/src/: token.c  tokenError.c
Source/All/Triple/include/: triple.h
Source/All/Triple/src/: triple.c
Source/All/Variable/include/: variable.h
Source/All/Variable/src/: variable.c
Source/All/VariableList/include/: variableList.h
Source/All/VariableList/src/: variableList.c
Source/All/Vector/include/: vector.h
Source/All/Vector/src/: vector.c
Source/Compiler/CodeGenerator/include/: codeGenerator.h
Source/Compiler/CodeGenerator/src/: codeGenerator.c
Source/Compiler/CodeGenerator/tests/: 1.expect  1.in  1.out  2.c  2_expect.s  3.in  4.in  5.expect  5.in  6_out.s  7.in  7_expect.s  8.c  README.md  codeGeneratorTests.c
Source/Compiler/Lexer/include/: lexer.h
Source/Compiler/Lexer/src/: lexer.c
Source/Compiler/Lexer/tests/: 1_input.txt  1_output.txt  2_input.txt  3_output.txt  5_input.txt  lexerTests.c
Source/Compiler/Syntaxer/include/: syntaxer.h
Source/Compiler/Syntaxer/src/: syntaxer.c
Source/Error/: error.c  error.h
Source/Lexer/: lexer.c  lexer.h  token.c  token.h  tokenError.c  tokenError.h  vector.c
Source/Lexer/tests/: 1_output.txt  2_output.txt  3_input.txt  3_output.txt  4_input.txt  4_output.txt  5_output.txt  lexerTests.c
Source/Safe/Error/include/: error.h
Source/Safe/Error/src/: error.c
Source/Safe/SafeAssert/include/: safeAssert.h
Source/Safe/SafeAssert/src/: safeAssert.c
Source/SafeAssert/: safeAssert.c  safeAssert.h
Sourse/Lexer/: token.h
Tests/in/: 6.c
